src/objects/FAU_PII_Table__c.object
<CustomObject>
    <fields>
        <fullName>FAU_Description__c</fullName>
        <description>Created for description Value .</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Focus__c</fullName>
        <description>Created for Focus values.</description>
        <label>Focus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Geographic_Focus__c</fullName>
        <description>Created for Geographic Focus value.</description>
        <label>Geographic Focus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Objectives_Deliverables__c</fullName>
        <description>Created for Objectives/Deliverables value.</description>
        <label>Objectives/Deliverables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAU_Participant_Chatter_Group_Id__c</fullName>
        <description>PII Table Group Id</description>
        <label>Participant Chatter Group Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FAU_Participant_Chatter_Group__c</fullName>
        <description>Created for Participant Chatter Group name in a link.</description>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + FAU_Participant_Chatter_Group_Id__c , Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Chatter Group</label>
        <type>Text</type>
    </fields>
    <label>PII Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PII Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PII Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>